# mathhook-kb

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  PHASE3_COMPLETE.md  PROJECT_STATUS.md  QUICK_START.md  README.md  SEO_GUIDE.md  build-all-docs.sh  convert_schema.py  generate_all_docs.sh  nixpacks.toml  railway.json
claudedocs/: 2025-12-15T03-01-00Z_conversion-report.md  markdown-to-yaml-conversion-report_2025-12-15_143000.md
colab-notebooks/: README.md  manifest.json
colab-notebooks/advanced/: advanced-assumptions.colab.ipynb  advanced-complex_numbers.colab.ipynb  advanced-differential_equations.colab.ipynb  advanced-evaluation_vs_simplification.colab.ipynb  advanced-matrices.colab.ipynb  advanced-noncommutative_algebra.colab.ipynb  advanced-noncommutative_api_reference.colab.ipynb  advanced-noncommutative_examples.colab.ipynb  advanced-pde-boundary_conditions.colab.ipynb  advanced-pde-classification.colab.ipynb  advanced-pde-examples.colab.ipynb  advanced-pde-fourier_coefficients.colab.ipynb  advanced-pde-heat_equation.colab.ipynb  advanced-pde-laplace_equation.colab.ipynb  advanced-pde-method_of_characteristics.colab.ipynb  advanced-pde-overview.colab.ipynb  advanced-pde-performance.colab.ipynb  advanced-pde-quick_reference.colab.ipynb  advanced-pde-quick_start.colab.ipynb  (+10 more)
crates/kb-api-docs/: Cargo.toml
crates/kb-cli/: Cargo.toml
crates/kb-cli/src/: main.rs
crates/kb-core/: Cargo.toml
crates/kb-core/src/: error.rs  lib.rs
crates/kb-core/src/generator/: mod.rs
crates/kb-core/src/parser/: mod.rs
crates/kb-core/src/schema/: article.rs  mod.rs  validation.rs
crates/kb-core/tests/: load_article_schema.rs  load_derivative_schema.rs
crates/kb-jupyter/: Cargo.toml
crates/kb-jupyter/examples/: generate_notebook.rs
crates/kb-jupyter/src/: generator.rs  lib.rs  notebook.rs  templates.rs
crates/kb-jupyter/tests/: generate_article_notebook.rs
crates/kb-mdbook/: Cargo.toml
crates/kb-mdbook/src/: generator.rs  lib.rs
crates/kb-sitemap/: Cargo.toml
crates/kb-sitemap/src/: generator.rs  lib.rs  pinger.rs
docs/: architecture.md  generator-guide.md  schema-reference.md
mathhook-docs-site/: README.md  SEO_GUIDE.md  app.vue  nixpacks.toml  nuxt.config.ts  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.json
outputs/: advanced-assumptions.json  advanced-assumptions.md  advanced-assumptions.vue  advanced-complex_numbers.md  advanced-complex_numbers.openapi.json  advanced-complex_numbers.vue  advanced-differential_equations.md  advanced-differential_equations.openapi.json  advanced-differential_equations.vue  advanced-evaluation_vs_simplification.json  advanced-evaluation_vs_simplification.md  advanced-evaluation_vs_simplification.vue  advanced-matrices.md  advanced-noncommutative_algebra.md  advanced-noncommutative_api_reference.md  advanced-noncommutative_api_reference.openapi.json  advanced-noncommutative_api_reference.rag.md  advanced-noncommutative_api_reference.vue  advanced-noncommutative_examples.md  advanced-noncommutative_examples.openapi.json  advanced-noncommutative_examples.vue  advanced-pde-boundary_conditions.md  advanced-pde-boundary_conditions.openapi.json  advanced-pde-classification.json  advanced-pde-classification.md  advanced-pde-classification.vue  advanced-pde-examples.json  advanced-pde-examples.md  advanced-pde-examples.rag.md  advanced-pde-examples.tex  advanced-pde-examples.vue  advanced-pde-fourier_coefficients.md  advanced-pde-heat_equation.md  advanced-pde-heat_equation.openapi.json  advanced-pde-heat_equation.rag.md  advanced-pde-heat_equation.vue  advanced-pde-laplace_equation.md  advanced-pde-laplace_equation.openapi.json  advanced-pde-laplace_equation.vue  advanced-pde-method_of_characteristics.json  (+216 more)
schemas/: introduction.yaml
scripts/: build-all-outputs.sh  build-mdbook.sh  deploy-outputs.sh  generate-all-outputs.sh  generate-index-pages.sh  organize-colab-notebooks.sh  quick-generate.sh
seo_test_output/: calculus-derivative.md  calculus-derivative.rag.md
test-output/: advanced-differential_equations.md
test_output/: calculus-derivative.md  calculus-derivative.rag.md
(+1007 files in other folders)
