[workspace]
members = [
    "crates/kb-core",
    "crates/kb-cli",
    "crates/kb-jupyter",
    "crates/kb-mdbook",
    "crates/kb-vue",
    "crates/kb-apidocs",
    "crates/kb-llm-rag",
    "crates/kb-colab",
    "crates/kb-latex",
    "crates/kb-json",
    "crates/kb-sitemap",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AhmedMashour/mathhook-kb"
authors = ["MathHook Contributors"]

[workspace.dependencies]
# Schema & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Templating
tera = "1.19"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
walkdir = "2.4"
regex = "1.10"

# Testing
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
