[package]
name = "kb-api-docs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "MathHook KB - kb-api-docs generator"

[dependencies]
kb-core = { path = "../kb-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
