[package]
name = "kb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "MathHook KB - kb-cli generator"

[dependencies]
kb-core = { path = "../kb-core" }
kb-jupyter = { path = "../kb-jupyter" }
kb-llm-rag = { path = "../kb-llm-rag" }
kb-mdbook = { path = "../kb-mdbook" }
kb-vue = { path = "../kb-vue" }
kb-apidocs = { path = "../kb-apidocs" }
kb-colab = { path = "../kb-colab" }
kb-latex = { path = "../kb-latex" }
kb-json = { path = "../kb-json" }
kb-sitemap = { path = "../kb-sitemap" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
