[package]
name = "kb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "Core schema parsing and validation for MathHook Knowledge Base"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
tera.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
regex.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.10"
