[package]
name = "kb-mdbook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

description = "MathHook KB - kb-mdbook generator"

[dependencies]
kb-core = { path = "../kb-core" }
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
anyhow.workspace = true
