[package]
name = "kb-sitemap"
description = "Sitemap generator and search engine submission for MathHook KB"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Core KB types
kb-core = { path = "../kb-core" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for ping submission
ureq = { version = "2.10", features = ["json"] }

# Date/time for lastmod
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# URL encoding
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.12"
